--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "clipboard": "^2.0.9",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
