--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "clipboard": "^2.0.9",
     "cors": "^2.8.5",
     "file-saver": "^2.0.5",
+    "fs-js": "^1.0.6",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "rppp": "^0.4.0",
     "typescript": "^4.6.4",
     "web-vitals": "^1.0.1"
   },
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "electon": "^0.0.1-security",
     "react-snapshot": "^1.3.0"
   },
   "reactSnapshot": {
