--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "clipboard": "^2.0.9",
     "cors": "^2.8.5",
+    "express": "^4.18.1",
     "file-saver": "^2.0.5",
     "fs-js": "^1.0.6",
     "jquery": "^3.6.0",
     "jquery-react": "^1.0.0",
     "lodash": "^4.17.21",
+    "mongodb": "^4.8.1",
+    "mongoose": "^6.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
